--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,124 @@
-.App {
-  text-align: center;
+.container{
+    background-image:url("./images/gifbg.gif");
+
+        min-width:90vw;
+         min-height:100vh; margin:0; overflow:hidden; color: #FFBF00; 
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+
+.js-logo{
+    width:65%;
+    position:absolute;
+    margin: auto;
+    justify-self: center;
+    left:18%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+/*Neon*/
+.a {
+    text-align: center;
+    font-size: 5em;
+    margin-bottom: 0;
+    margin-top: 20px;
+    line-height: 1;
+    text-decoration: none;
+    color: #fff;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+
+.a:nth-child(1) {
+    font-family: Courgette;
+    animation: neon2 1.5s ease-in-out infinite alternate;
 }
 
-.App-link {
-  color: #61dafb;
+@keyframes neon2 {
+    from {
+        text-shadow: 0 0 5px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 40px #4EB5CF ,
+            0 0 70px #4EB5CF , 0 0 80px #4EB5CF , 0 0 100px #4EB5CF , 0 0 150px #4EB5CF ;
+    }
+
+    to {
+        text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #4EB5CF ,
+            0 0 35px #4EB5CF , 0 0 40px #4EB5CF , 0 0 50px #4EB5CF , 0 0 75px #4EB5CF ;
+    }
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+@keyframes neon3 {
+    from {
+        text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 40px #ffdd1b,
+            0 0 70px #ffdd1b, 0 0 80px #ffdd1b, 0 0 100px #ffdd1b, 0 0 150px #ffdd1b;
+    }
+
+    to {
+        text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #ffdd1b,
+            0 0 35px #ffdd1b, 0 0 40px #ffdd1b, 0 0 50px #ffdd1b, 0 0 75px #ffdd1b;
+    }
+}
+
+@keyframes neon4 {
+    from {
+        text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 40px #b6ff00,
+            0 0 70px #b6ff00, 0 0 80px #b6ff00, 0 0 100px #b6ff00, 0 0 150px #b6ff00;
+    }
+
+    to {
+        text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #b6ff00,
+            0 0 35px #b6ff00, 0 0 40px #b6ff00, 0 0 50px #b6ff00, 0 0 75px #b6ff00;
+    }
+}
+
+@keyframes neon5 {
+    from {
+        text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 40px #ff9900,
+            0 0 70px #ff9900, 0 0 80px #ff9900, 0 0 100px #ff9900, 0 0 150px #ff9900;
+    }
+
+    to {
+        text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #ff9900,
+            0 0 35px #ff9900, 0 0 40px #ff9900, 0 0 50px #ff9900, 0 0 75px #ff9900;
+    }
+}
+
+@keyframes neon6 {
+    from {
+        text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 40px #ff00de,
+            0 0 70px #ff00de, 0 0 80px #ff00de, 0 0 100px #ff00de, 0 0 150px #ff00de;
+    }
+
+    to {
+        text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #ff00de,
+            0 0 35px #ff00de, 0 0 40px #ff00de, 0 0 50px #ff00de, 0 0 75px #ff00de;
+    }
+}
+
+/*Make stuff responsive*/
+
+@media (max-width: 650px) {
+    p {
+        font-size: 3.5em;
+    }
+}
+
+.sb {
+    padding-top: 10;
+    padding-bottom: 10;
+    background-color: 'transparent';
+    border-radius: 0;
+    border: "3px solid #fff";
+    padding-left: 50;
+    padding-right: 50;
+    color: "#fff";
+    font-weight: "bold";
+}
+
+.sb-active {
+    padding-top: 10;
+    padding-bottom: 10;
+    background-color: 'gold';
+    border-radius: 0;
+    border: "3px solid #fff";
+    padding-left: 50;
+    padding-right: 50;
+    color: "black";
+    font-weight: "bold"
 }
